--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<div>
+		<nav>
+			<ul>
+				<a href="https://www.google.com/s">Home</a>
+				<a href="https://www.google.com/s">About us</a>
+				<a href="https://www.google.com/s">Contact us</a>
+				
+			</ul>
+		</nav>
+		<div>
+			<h1>3 random images</h1>
+			<img src="https://picsum.photos/id/123/200/300" alt="image1">
+			<img src="https://picsum.photos/id/124/200/300" alt="image2">
+			<img src="https://picsum.photos/id/125/200/300" alt="image3">
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
